# parselbox-wip

./: Makefile  pyproject.toml
.github/workflows/: release.yaml
examples/: demo.py
parselbox/: __init__.py  codemode.py  main.py  mcp.py  output.txt
parselbox/sandbox/: deno.jsonc  sandbox.ts  tools.ts
tests/: tests.py
