[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parselbox"
version = "0.0.1"
description = "A Python sandbox for running untrusted code."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT License" }
authors = [
  { name = "Sanjeet Chatterjee" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=2.13.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
]
